# microadventures

./: .cz.yaml  .gitignore  .kluctl.yaml  .pre-commit-config.yaml  .trivyignore  .trufflehogignore  CONTRIBUTING.md  LICENSE  README.md  devbox.json  pyproject.toml  test_edgy_adventures.py
.github/: dependabot.yml
.github/scripts/: test-and-report.sh
.github/workflows/: image-ci.yaml
.husky/: pre-commit
_k8s/backend/: ConfigMap.yaml  Deployment.yaml  IngressRoute.yaml  Taskfile.yaml
_k8s/common/: ClusterIssuer.yaml  ConfigMap.yaml  README.md
_k8s/frontend/: Deployment.yaml  Taskfile.yaml
_k8s/kind/: Taskfile.yaml
_k8s/postgresql/: Job.db-migrator.yaml  Taskfile.yaml  values.yaml
_k8s/secrets-gcp/: README.md  Taskfile.yaml  values.yaml
_k8s/secrets-kind/: Taskfile.yaml
cicd/: Taskfile.yaml
cicd/github-actions/: Taskfile.yaml
cicd/kluctl-gitops/: .kluctl.yaml  Taksfile.yaml  Taskfile.yaml  deployment.yaml
components/: Taskfile.yaml  package-lock.json  package.json
components/api-backend/: Taskfile.yaml  pyproject.toml
components/api-backend/app/: main.py
components/api-backend/app/api/endpoints/: auth.py  products.py
components/api-backend/app/core/: config.py  security.py
components/api-backend/app/db/: database.py  models.py
components/backend/: .dockerignore  .env.example  .envrc  Dockerfile  README.md  Taskfile.yaml  Tiltfile  Tiltfile.yaml  alembic.ini  app.py  database.db  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  server.py  test.db  test_ai.py  test_architecture.py  test_docker_build.py  test_duplicate_user.py  test_error_handling.py  test_history_debug.py  test_image_service.py  test_integration.py  test_minimal.py  test_simple.py
components/backend/adventure/models/: adventure.py
components/backend/adventure/repositories/: __init__.py  adventure_quota_repository.py  adventure_repository.py
components/backend/adventure/routes/: adventure_router.py
components/backend/adventure/schemas/: adventure.py
components/backend/adventure/services/: adventure_domain_service.py  adventure_quota_domain_service.py  adventure_service.py  ai_service.py  ai_service_backup.py  ai_service_new.py  image_service.py
components/backend/alembic/: env.py
components/backend/alembic/versions/: 10d99654f6bc_add_role.py  1bccd7bf0987_add_image_url_and_missing_fields_to_.py  43f1f9b7fff1_add_challenge_tables.py  7b5799dd8ccb_merge_image_url_migrations.py  a1b2c3d4e5f6_update_adventure_table_for_itinerary.py  ae6fe57c736d_initial_migration.py  b5a2210f2a91_merge_all_migrations.py  c9f8e2d3a4b5_add_challenge_tables.py  de89a506b11e_merge_challenge_table_migrations.py  f1a2b3c4d5e6_update_to_adventure_tables.py  g2h3i4j5k6l7_add_image_url_and_missing_fields.py  h3i4j5k6l7m8_add_only_image_url.py  public_sharing_001_add_public_sharing_fields.py
components/backend/auth/routes/: auth_router.py
components/backend/auth/services/: auth_service.py
components/backend/auth/utils/: auth_utils.py
components/backend/core/: config.py  database.py
components/backend/core/routes/: __init__.py  api_router.py
components/backend/src/: ai_generator.py  app.py  utils.py
components/backend/src/database/: models.py
components/backend/src/routes/: webhooks.py
components/backend/tests/: __init__.py  conftest.py  test_adventure_api_integration.py  test_adventure_domain_service.py  test_adventure_endpoints.py  test_adventure_integration.py  test_adventure_quota_domain_service.py  test_adventure_repository.py  test_adventure_service.py  test_ai.py  test_all_features.py  test_edgy_adventures.py  test_history.py  test_history_debug.py  test_image_improvements.py  test_image_service.py  test_integration.py  test_quota_endpoint.py  test_user_repository.py  test_user_service.py
components/backend/user/models/: user.py
components/backend/user/repositories/: __init__.py  user_repository.py
components/backend/user/routes/: user_router.py
components/backend/user/schemas/: user_update.py
components/backend/user/services/: user_domain_service.py  user_service.py
docs/: gcp-deployment.md  kind-setup.md  native-local-setup.md  tilt-setup.md
initial-setup/: README.md  Taskfile.yaml
k8s/: .gitignore  .kluctl.yaml  LOCAL_SETUP.md  README.md  TASKS.md  Taskfile.yaml  certificate-kind.yaml  cluster-issuer-kind.yaml  deployment.yaml  https-ingress-kind.yaml  tasks.yaml
kluctl/: README.md  Taskfile.yaml  deployment.yaml
screenshots/: README.md
tilt/: Taskfile.yaml  Tiltfile  Tiltfile.yaml
(+241 files in other folders)
